--- a/Changelog
+++ b/Changelog
@@ -9,7 +9,12 @@ Add short, byte, char variables.
 * 20191025: Hang Lei (NCEP/EMC): Cmake build system.  Need to set compiler
 options for specific machine.  For example, on Hera:
 
-cmake -DCMAKE_C_COMPILER=icc -DCMAKE_CXX_COMPILER=icpc -DCMAKE_Fortran_COMPILER=ifort -DMPI_LIBRARIES=/apps/intel/compilers_and_libraries_2018/linux/mpi/intel64/lib -DMPI_INCLUDES=/apps/intel/compilers_and_libraries_2018/linux/mpi/intel64/include -DNETCDF_LIBRARY=/apps/netcdf/4.6.1/intel/16.1.150/lib -DNETCDF_INCLUDE=/apps/netcdf/4.6.1/intel/16.1.150/include .
+cmake -DCMAKE_C_COMPILER=icc -DCMAKE_CXX_COMPILER=icpc \
+-DCMAKE_Fortran_COMPILER=ifort \
+-DMPI_LIBRARIES=/apps/intel/compilers_and_libraries_2018/linux/mpi/intel64/lib\
+-DMPI_INCLUDES=/apps/intel/compilers_and_libraries_2018/linux/mpi/intel64/include\
+-DNETCDF_LIBRARY=/apps/netcdf/4.6.1/intel/16.1.150/lib\
+-DNETCDF_INCLUDE=/apps/netcdf/4.6.1/intel/16.1.150/include .
 
 cmake --build .
 
