fix for new 'time_iso' variable in GFS history files (#53)
Add 'time_iso' character var to FV3 history file, update tests

Co-authored-by: jswhit2 <Jeffrey.S.Whitaker@noaa.gov>

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 Change history:
 
+* 20210329: Jeff Whitaker (ESRL/PSD):  Fix reading of character arrays (so new
+'time_iso' variable can be read from GFS history files). Add slicing
+capability for 5d variables.
+
 * 20191207: Jeff Whitaker (ESRL/PSD):  preserve chunksize information in
 create_dataset, allow for NF90_FORMAT_64BIT (non-HDF5) formatted files (PR
 #2)
